add header and middle html and css

--- a/header.css
+++ b/header.css
@@ -14,6 +14,7 @@
   }
   .info-part-1{
     margin: 4rem;
+    padding: 3rem;
   }
   .info-part-2 , .info-part-3 {
     font-family: "Fira Sans", serif;
