--- a/style/bottom.css
+++ b/style/bottom.css
@@ -1,7 +1,7 @@
 .bottom-part {
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: 300px 300px;
+    grid-template-rows: 1fr 1fr;
   }
   
   
